refactor: update data extraction method for readability and improve comment clarity
- Replaced `get(0)` with `getFirst()` for better expressiveness in `CheckoutSessionServiceImpl`.
- Refined comments in multiple files for improved clarity and consistency.
- Minor adjustment to `CheckoutSessionType` enum to enhance comment accuracy.